<resources>
    <string name="app_name">生活助手</string>
    <string name="voice_chat">语音助手</string>
    <string name="it_articles">IT资讯</string>
    <string name="beauty_welfare">福利</string>
    <string name="personal_center">个人中心</string>
    <string name="setting">设置</string>
    <string name="start_enter_main">开始体验</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="modify">修改</string>
    <string name="register">注册</string>
    <string name="now_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="repassword">记住密码</string>
    <string name="fgpassword">忘记密码</string>
    <string name="mfpassword">修改密码</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄</string>
    <string name="age2">年龄：</string>
    <string name="personal_desc">简介</string>
    <string name="personal_desc2">简介：</string>
    <string name="check_password">确认密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="email">邮箱</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="forget_password_desc">请输入您注册时申请的邮箱，我们将通过向该邮箱发送邮件来找回密码！</string>
    <string name="register_remind">注册成功需前往邮箱验证，否则无法登录成功！</string>
    <string name="et_remind">输入框不能为空！</string>
    <string name="personal_desc_default">这个人很懒，什么都没有留下！</string>
    <string name="password_mismatch">两次输入的密码不一致！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_failed_203">注册失败，该邮箱已经被注册过！</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failed">登录失败, 用户名或密码错误！</string>
    <string name="email_not_verify">邮箱未验证，请前往验证！</string>
    <string name="email_error">邮箱错误！</string>
    <string name="email_have_send">邮箱已发送至: </string>
    <string name="userinfo_modify_success">修改成功！</string>
    <string name="userinfo_modify_failed">修改失败！</string>
    <string name="password_modify_success">修改密码成功！</string>
    <string name="password_modify_failed">修改密码失败！</string>
    <string name="text_dialog_loading">正在加载</string>
    <string name="edit_info">编辑资料</string>
    <string name="logistics_query">物流查询</string>
    <string name="location_query">归属地查询</string>
    <string name="exit">退出登录</string>
    <string name="take_photo">拍一张照片</string>
    <string name="photo_from_album">从相册中选一张</string>
    <string name="cancel">取消</string>
    <string name="permission_deny">您已经拒绝过一次</string>
    <string name="no_sdcard">设备没有SD卡</string>
    <string name="open_camera_permission">请允许打开相机</string>
    <string name="open_sdcard_permission">请允许操作SD卡</string>
    <string name="express_search">快递查询</string>
    <string name="company_name">快递公司</string>
    <string name="order_id">订单号</string>
    <string name="search">查询</string>
    <string name="remark_default">您的快件已签收</string>
    <string name="zone_default">大连</string>
    <string name="detetime_default">2017-12-20</string>
    <string name="search_failed">查询失败，请再试一次</string>
    <string name="phone_search">归属地查询</string>
    <string name="phone">手机号</string>
    <string name="send">发送</string>
    <!--<string name="time_default">2018-02-19 12:05:23</string>-->
    <string name="voice_name">您好，我是静静，很高兴为您服务！</string>
    <string name="news_source">来源：</string>
    <string name="speak_switch">语音模式</string>


</resources>
