<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="cn.com.dyhdev.lifeassistant.ui.RegisterActivity">

    <EditText
        android:id="@+id/id_register_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/id_et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"/>
    <EditText
        android:id="@+id/id_et_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/personal_desc"
        android:lines="2"/>
    <RadioGroup
        android:id="@+id/id_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/id_rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man"/>
        <RadioButton
            android:id="@+id/id_rb_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/woman"/>
    </RadioGroup>
    <EditText
        android:id="@+id/id_register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/id_ck_register_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/id_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_remind"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/id_btn_register_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>



</LinearLayout>
