<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.dyhdev.lifeassistant.ui.ForgetPasswordActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mfpassword"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/id_now_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/now_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/id_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/id_new_password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/id_btn_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue_bg"
        android:text="@string/mfpassword"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fgpassword"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/id_forget_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <Button
        android:id="@+id/id_forget_btn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue_bg"
        android:text="@string/fgpassword"
        android:textColor="@android:color/white"/>

</LinearLayout>
