<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ui.LoginActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>
    <EditText
        android:id="@+id/id_login_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/id_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:hint="@string/password"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp">

        <CheckBox
            android:id="@+id/id_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/repassword"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue_bg"
        android:text="@string/login"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_blue_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

       <TextView
           android:id="@+id/id_tv_fgpassword"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/fgpassword"
           android:textColor="@color/colorAccent"
           android:layout_gravity="right"/>
    </LinearLayout>

</LinearLayout>
