<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="cn.com.dyhdev.lifeassistant.ui.ExpressActivity">
    
    <EditText
        android:id="@+id/id_et_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"/>
    <EditText
        android:id="@+id/id_et_order_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order_id"/>
    <Button
        android:id="@+id/id_btn_express_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blue_bg"
        android:textColor="@color/color_white"
        android:text="@string/search"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
